crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_enum.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { enum empty {} }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (enum_item name: (identifier)))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Enum(
                        Enum {
                            name: Ident(
                                Id {
                                    value: 2,
                                },
                            ),
                            index: EnumIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            cases: [],
                        },
                    ),
                ),
            ],
        },
    },
}
