crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_interface.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface empty {}"
  ast: "(source_file (top_level_item (interface_item name: (identifier))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: empty,
            docs: None,
            items: [],
        },
    },
}
