crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_record.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { record empty {} }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (record_item name: (identifier)))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Record(
                        Record {
                            name: Ident(
                                Id {
                                    value: 2,
                                },
                            ),
                            index: RecordIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            fields: [],
                        },
                    ),
                ),
            ],
        },
    },
}
