crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_resource.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { resource empty; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (resource_item name: (identifier)))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Resource(
                        Resource {
                            name: Ident(
                                Id {
                                    value: 2,
                                },
                            ),
                            index: ResourceIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            constructor: None,
                            methods: [],
                            static_methods: [],
                        },
                    ),
                ),
            ],
        },
    },
}
