crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_world.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "world empty {}"
  ast: "(source_file (top_level_item (world_item name: (identifier))))"
---
Package {
    decl: None,
    worlds: {
        WorldIndex(0): World {
            name: empty,
            docs: None,
            items: [],
        },
    },
    interfaces: {},
}
