crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__func_with_no_arguments.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { f: func(); }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (func_item name: (identifier) ty: (func_type params: (param_list)))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Func(
                    FuncItem {
                        name: Ident(
                            Id {
                                value: 2,
                            },
                        ),
                        index: Standalone(
                            FunctionIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                        ),
                        docs: None,
                        params: [],
                        return_value: None,
                    },
                ),
            ],
        },
    },
}
