crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__func_with_return_value.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { f: func() -> bool; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (func_item name: (identifier) ty: (func_type params: (param_list) result: (result_list (ty (builtins)))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Func(
                    FuncItem {
                        name: f,
                        index: TopLevel(
                            InterfaceIndex(0),
                            FuncItemIndex(0),
                        ),
                        docs: None,
                        params: [],
                        return_value: Some(
                            Single(
                                Builtin(
                                    Boolean,
                                ),
                            ),
                        ),
                    },
                ),
            ],
        },
    },
}
