crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__interface_with_builtin_type.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { type x = u32; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (type_item name: (identifier) ty: (ty (builtins))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                TypeAlias(
                    TypeAlias {
                        name: x,
                        index: TypeAliasIndex(0),
                        docs: None,
                        ty: Builtin(
                            U32,
                        ),
                    },
                ),
            ],
        },
    },
}
