crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__interface_with_func.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
expression: got
---
Package {
    decl: None,
    worlds: [],
    interfaces: [
        Interface {
            name: console,
            docs: None,
            items: [
                Func(
                    FuncItem {
                        name: log,
                        docs: None,
                        params: [
                            Parameter {
                                name: message,
                                ty: Builtin(
                                    String,
                                ),
                            },
                        ],
                        return_value: None,
                    },
                ),
            ],
        },
    ],
}
