crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__lower_an_empty_file.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: ""
  ast: (source_file)
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {},
}
